// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VixSrc handle imdb black mirror s4e2 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
    },
    "url": "https://vixsrc.to/tv/42009/4/2",
  },
]
`;

exports[`VixSrc handle imdb full metal jacket 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
    },
    "url": "https://vixsrc.to/movie/600",
  },
]
`;
